[update] dark mode button fixes

--- a/demos/photographer/photographer.css
+++ b/demos/photographer/photographer.css
@@ -294,7 +294,6 @@ body.dark,
 	position: fixed;
 	top: 0;
 	right: 65px;
-	bottom: 80px;
 	text-align: center;
 	margin: 0 auto;
 	z-index: 299;
